[project]
name = "advocacy-fund-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.0.0",
    "db-dtypes>=1.3.0",
    "gunicorn>=22.0.0",
]
